<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">hb</string>
    <string name="accounts">Accounts</string>
    <string name="total">Total</string>
    <string name="orders">Orders</string>
    <string name="categories">Categories</string>
    <string name="root_category">Root</string>
    <string name="add_category">Add New Category</string>
    <string name="add_order">Add New Order</string>
    <string name="add_category_select_category">Choose Parent Category</string>
    <string name="add_category_title">Fill Category Title</string>
    <string name="add_account">Add New Account</string>
    <string name="edit_category">Edit Category</string>
    <string name="edit_account">Edit Account</string>
    <string name="edit_order">Edit Order</string>
    <string name="remove_order">Remove Order</string>
    <string name="remove_account">Remove Account</string>
    <string name="remove_category">Remove Category</string>
    <string name="remove_account_description">All orders in this account will be removed.</string>
    <string name="remove_category_description">All orders in this category will be removed.</string>
    <string name="remove_order_description">Are you sure? Do you really want to remove order?</string>
    <string name="manage_account">Manage Account</string>
    <string name="manage_category">Manage Category</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="type">Type</string>
    <string name="sum">Sum:</string>
    <string name="description">Description:</string>
    <string name="save">Save</string>
    <string name="type_income">(+) Income</string>
    <string name="type_outgo">(-) Outgo</string>

    <string name="edit_order_category">Category:</string>
    <string name="edit_order_account">Account:</string>
    <string name="edit_order_type">Type:</string>
    <string name="edit_order_choose_type">Choose Type</string>
    <string name="edit_order_choose_account">Choose Account</string>
    <string name="edit_order_choose_category">Choose Category</string>
    <string name="edit_order_choose_category_message">Please set category</string>
    <string name="edit_order_choose_account_message">Please set account</string>
    <string name="edit_order_choose_sum_message">Please set order sum</string>

    <string name="filter_first">\u003C\u003C</string>
    <string name="filter_prev">\u003C</string>
    <string name="filter_next">\u003E</string>
    <string name="filter_last">\u003E\u003E</string>
</resources>
