<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_order_account"
            android:id="@+id/accountTitle" />
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/list"
            android:id="@+id/account" android:clickable="true" android:textStyle="bold" android:gravity="center"
            android:textSize="18dp"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_order_category"
            android:id="@+id/categoryTitle" />
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/list"
            android:id="@+id/category" android:clickable="true" android:textStyle="bold" android:gravity="center"
            android:textSize="18dp"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_order_type"
            android:id="@+id/typeTitle" />
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/list"
            android:id="@+id/type" android:clickable="true" android:textStyle="bold" android:gravity="center"
            android:textSize="18dp"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:id="@+id/save" android:layout_gravity="left|center_vertical"/>
</LinearLayout>


